[package]
authors = ["Jeff Muizelaar <jmuizelaar@mozilla.com>", "Joep Meindertsma <joep@ontola.io>"]
description = "A library to extract content from pdfs"
documentation = "https://docs.rs/crate/pdf-extract/"
edition = "2021"
keywords = ["pdf2text", "text", "pdf", "pdf2txt"]
license = "MIT"
name = "pdf-extract-temporary-mitigation-panic"
repository = "https://github.com/Endle/pdf-extract/tree/publish"
version = "0.7.1"

[profile.release]
debug = true

[dependencies]
adobe-cmap-parser = "0.3.3"
encoding = "0.2.33"
euclid = "0.20.5"
linked-hash-map = "=0.5.3"
lopdf = {version = "0.29", default-features = false, features = ["pom_parser"]}
postscript = "0.17"
type1-encoding-parser = "0.1.0"
unicode-normalization = "0.1.19"
